Project_file/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
23:48:53 **** Incremental Build of configuration Debug for project Project_file ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Project_file.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\Chellapandi\Desktop\ARUN\Software\STM32\AiDen_Technical_Round\Project_file\Project_file\STM32F411CEUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Project_file.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Project_file.elf
 
arm-none-eabi-size  Project_file.elf 
arm-none-eabi-objdump -h -S Project_file.elf  > "Project_file.list"
   text	   data	    bss	    dec	    hex	filename
  11968	     12	   1740	  13720	   3598	Project_file.elf
Finished building: default.size.stdout
 
Finished building: Project_file.list
 
23:48:57 **** Incremental Build of configuration Debug for project Project_file ****
make -j16 all 
arm-none-eabi-size  Project_file.elf 
   text	   data	    bss	    dec	    hex	filename
  11968	     12	   1740	  13720	   3598	Project_file.elf
Finished building: default.size.stdout
 
00:14:12 **** Incremental Build of configuration Debug for project Project_file ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/stm32f4xx_hal_msp.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/stm32f4xx_hal_msp.d" -MT"Core/Src/stm32f4xx_hal_msp.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_hal_msp.o"
arm-none-eabi-gcc -o "Project_file.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\Chellapandi\Desktop\ARUN\Software\STM32\AiDen_Technical_Round\Project_file\Project_file\STM32F411CEUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Project_file.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Project_file.elf
 
arm-none-eabi-size  Project_file.elf 
arm-none-eabi-objdump -h -S Project_file.elf  > "Project_file.list"
   text	   data	    bss	    dec	    hex	filename
  10788	     12	   1716	  12516	   30e4	Project_file.elf
Finished building: default.size.stdout
 
Finished building: Project_file.list
 
00:31:52 **** Incremental Build of configuration Debug for project Project_file ****
make -j16 all 
arm-none-eabi-size  Project_file.elf 
   text	   data	    bss	    dec	    hex	filename
  10788	     12	   1716	  12516	   30e4	Project_file.elf
Finished building: default.size.stdout
 
00:32:18 **** Incremental Build of configuration Debug for project Project_file ****
make -j16 all 
arm-none-eabi-size  Project_file.elf 
   text	   data	    bss	    dec	    hex	filename
  10788	     12	   1716	  12516	   30e4	Project_file.elf
Finished building: default.size.stdout
 
00:35:53 **** Incremental Build of configuration Debug for project Project_file ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:133:27: error: 'readValue3' undeclared (first use in this function); did you mean 'readValue2'?
  133 |                           readValue3 = HAL_ADC_GetValue(&hadc1);
      |                           ^~~~~~~~~~
      |                           readValue2
../Core/Src/main.c:133:27: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:138:27: error: 'PWM3' undeclared (first use in this function); did you mean 'PWM2'?
  138 |                           PWM3 = readValue3/7;
      |                           ^~~~
      |                           PWM2
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.
00:36:06 **** Incremental Build of configuration Debug for project Project_file ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:407,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:137:71: error: 'PWM3' undeclared (first use in this function); did you mean 'PWM2'?
  137 |                           __HAL_TIM_SET_COMPARE(&htim2,TIM_CHANNEL_4, PWM3);
      |                                                                       ^~~~
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_tim.h:1395:72: note: in definition of macro '__HAL_TIM_SET_COMPARE'
 1395 |   (((__CHANNEL__) == TIM_CHANNEL_1) ? ((__HANDLE__)->Instance->CCR1 = (__COMPARE__)) :\
      |                                                                        ^~~~~~~~~~~
../Core/Src/main.c:137:71: note: each undeclared identifier is reported only once for each function it appears in
  137 |                           __HAL_TIM_SET_COMPARE(&htim2,TIM_CHANNEL_4, PWM3);
      |                                                                       ^~~~
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_tim.h:1395:72: note: in definition of macro '__HAL_TIM_SET_COMPARE'
 1395 |   (((__CHANNEL__) == TIM_CHANNEL_1) ? ((__HANDLE__)->Instance->CCR1 = (__COMPARE__)) :\
      |                                                                        ^~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.
00:36:18 **** Incremental Build of configuration Debug for project Project_file ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Project_file.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\Chellapandi\Desktop\ARUN\Software\STM32\AiDen_Technical_Round\Project_file\Project_file\STM32F411CEUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Project_file.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Project_file.elf
 
arm-none-eabi-size  Project_file.elf 
arm-none-eabi-objdump -h -S Project_file.elf  > "Project_file.list"
   text	   data	    bss	    dec	    hex	filename
  11844	     12	   1740	  13596	   351c	Project_file.elf
Finished building: default.size.stdout
 
Finished building: Project_file.list
 
00:38:29 **** Incremental Build of configuration Debug for project Project_file ****
make -j16 all 
arm-none-eabi-size  Project_file.elf 
   text	   data	    bss	    dec	    hex	filename
  11844	     12	   1740	  13596	   351c	Project_file.elf
Finished building: default.size.stdout
 
